--- a/SupermortalMediaFoundationVideoEncoder.Encoder/SupermortalMediaFoundationVideoEncoder.Encoder.vcxproj
+++ b/SupermortalMediaFoundationVideoEncoder.Encoder/SupermortalMediaFoundationVideoEncoder.Encoder.vcxproj
@@ -11,9 +11,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{E58CFC59-0AD8-4D1A-96BF-349E9AC4175C}</ProjectGuid>
+    <ProjectGuid>{115DBE19-B42E-4EC0-83DD-B5C2556A04BF}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>MusicianHelperMediaFoundationVideoEncoder</RootNamespace>
+    <RootNamespace>SupermortalMediaFoundationVideoEncoderEncoder</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -41,11 +41,10 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>..\MusicianHelper.NativeVideoEncoderWrapper\Encoder\$(Configuration)</OutDir>
+    <OutDir>$(SolutionDir)\SupermortalMediaFoundationVideoEncoder.NativeVideoEncoderWrapper\Encoder\$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>$(SolutionDir)\$(Configuration)</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -71,7 +70,6 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -81,11 +79,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="VideoEncoder.h" />
-  </ItemGroup>
-  <ItemGroup>
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="VideoEncoder.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="VideoEncoder.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
